Updating-CE-WE-HE

--- a/api-reference/essentials/error_codes.mdx
+++ b/api-reference/essentials/error_codes.mdx
@@ -9,7 +9,7 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | IR         | Invalid Request Error | Error caused due to invalid fields and values in API request |
 | CE         | Connector Error       | Errors originating from connector’s end                      |
 | HE         | Hyperswitch Error     | Errors originating from Hyperswitch’s end                    |
-| WE         | Webhook Error    |                   |
+| WE         | Webhook Error         | Errors related to Webhooks                |
 
 | Error Codes | HTTP Status codes                     | Error Type            | Error message                                                                                                                                                       | Error Handling                                                                                                                                                                       |
 | ----------- | ------------------------------------- | --------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
@@ -53,23 +53,14 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | CE_06       | 400                                   | processing_error      | Refund failed while processing with the connector. Retry refund                                                                                                     | Refund failed to process at the connector. Please retry refund                                                                                                                       |
 | CE_07       | 400                                   | processing_error      | Verification failed while processing with the connector. Retry operation                                                                                            | Retry the operation again as verification failed at the connector                                                                                                                    |
 | CE_08       |                                       | processing_error      | Dispute operation failed while processing with connector. Retry operation                                                                                           | Retry the operation again as dispute failed at the connector                                                                                                                                   |
-| HE_00       | 500                                   | server_not_available  | Something went wrong                                                                                                                                                | Please retry the operation. If the error still persists, please reach out to Hyperswitch support                                                                                         |
-| HE_02       | 400                                   | duplicate_request     | Duplicate refund request. Refund already attempted with the refund ID                                                                                               | Please verify the refund id and no action required if the refund is already attempted                                                                                                |
-| HE_03       | 400                                   | duplicate_request     | Duplicate mandate request. Mandate already attempted with the Mandate ID                                                                                            | Please verify the mandate id and no action required if the mandate is already created                                                                                                |
-| HE_04       | 400                                   | duplicate_request     | The merchant account with the specified details already exists in our records                                                                                       | Please verify the merchant account details and no action required if the merchant account is already created                                                                         |
-| HE_05       | 400                                   | duplicate_request     | The merchant connector account with the specified profile_id and connector_label already exists in our records                                                      | Please verify the merchant connector account details and no action required if the merchant connector account is already created                                                     |
-| HE_06       | 400                                   | duplicate_request     | The payment method with the specified details already exists in our records                                                                                         | Please verify the mandate id and no action required if the mandate is already created                                                                                                |
-| HE_10       | 400                                   | object_not_found      | Refund does not exist in our records                                                                                                                                | Please verify the refund details and enter valid details                                                                                                                             |
-| HE_11       | 400                                   | object_not_found      | Customer does not exist in our records                                                                                                                              | Please verify the customer details and enter valid details                                                                                                                           |
-| HE_13       | 400                                   | object_not_found      | Payment does not exist in our records                                                                                                                               | Please verify the payment details and enter valid details                                                                                                                            |
-| HE_14       | 400                                   | object_not_found      | Payment method does not exist in our records                                                                                                                        | Please verify the payment method details and enter valid details                                                                                                                     |
-| HE_15       | 400                                   | object_not_found      | Merchant account does not exist in our records                                                                                                                      | Please verify the merchant account details and enter valid details                                                                                                                   |
-| HE_16       | 400                                   | object_not_found      | Merchant connector account does not exist in our records                                                                                                            | Please verify the merchant connector details and enter valid details                                                                                                                 |
-| HE_19       | 400                                   | object_not_found      | Resource ID does not exist in our records                                                                                                                           | Please verify the resource ID and enter valid details                                                                                                                                |
-| HE_20       | 400                                   | object_not_found      | Mandate does not exist in our records                                                                                                                               | Please verify the mandate details and enter valid details                                                                                                                            |
-| HE_29       | 400                                   | validation_error      | Refunds not possible through Hyperswitch. Please raise Refunds through the “connector” dashboard                                                                    | Please raise refunds request from the respective connector’s dashboard as the connectors don’t provide a Refunds API for Hyperswitch to process                                      |
-| HE_30       | 400                                   | validation_error      | Mandate Validation Failed                                                                                                                                           | Please verify the mandate details again and enter valid details                                                                                                                      |
-| HE_31       | 400                                   | validation_error      | The payment has not succeeded yet. Please pass a successful payment to initiate refund                                                                              | Please verify the request parameters and retry the payment. If the error still persists, please reach out to Hyperswitch support                                                     |
-| HE_34       | 400                                   | object_not_found      | Successful payment not found for the given payment id                                                                                                               | Please verify the payment details and status as you can attempt refunds only for payments with success status                                                                        |
-| HE_35       | 400                                   | object_not_found      | The connector provided in the request is incorrect or not available                                                                                                 | Please verify your connector configuration and provide a valid connector that is enabled for your account                                                                            |
-| HE_36       | 400                                   | object_not_found      | Address does not exist in our records                                                                                                                               | Please verify the address details and pass valid address details                                                                                                                     |
+| HE_01       | 400                                   | object_not_found      | Requested object(Customer, Payments, Merchants, Refunds etc.) does not exist in our records                                                                         | Please verify the object(Customer, Payments, Merchants, Refunds etc.) details and enter valid details                                                                               |                                                                                                                           |
+| HE_02       | 500                                   | server_not_available  | Something went wrong                                                                                                                                                | Please retry the operation. If the error still persists, please reach out to Hyperswitch support                                                                                         |
+| HE_03       | 400                                   | validation_error      | Validation Failed for the requested operation with the given details.                                                                                               | Please verify the details again and enter valid details                                                                                                                      |
+| HE_04       | 400                                   | lock_timeout          | Resource is busy.                                                                                                                                                   | Please try again later.                                                                                                                 |
+| WE_01       | 401                                   | WebhookAuthenticationFailed    | Failed to authenticate the webhook                                                                                                                         | Please verify the authentication credentials and try again.                                                                         |
+| WE_04       | 404                                   | WebhookResourceNotFound        | Webhook resource not found                                                                                                                                 | Ensure the webhook URL is correct and the resource exists.                                                                          |
+| WE_02       | 400                                   | WebhookBadRequest              | Bad request received in webhook                                                                                                                            | Check the request parameters and format, then try again.                                                                            |
+| WE_03       | 500                                   | WebhookProcessingFailure       | There was some issue processing the webhook                                                                                                                | Please try again later. If the issue persists, contact Hyperswitch support.                                                                     |
+| WE_05       | 422                                   | WebhookUnprocessableEntity     | Unable to process the webhook body                                                                                                                         | Ensure the webhook body is correctly formatted and try again.                                                                       |
+| WE_06       | 400                                   | WebhookInvalidMerchantSecret   | Merchant Secret set by merchant for webhook source verification is invalid                                                                                 | Verify the Merchant Secret, then try again.                                                              |
+
