Updating-CE-WE-HE

--- a/api-reference/essentials/error_codes.mdx
+++ b/api-reference/essentials/error_codes.mdx
@@ -53,7 +53,7 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | CE_06       | 400                                   | processing_error      | Refund failed while processing with the connector. Retry refund                                                                                                     | Refund failed to process at the connector. Please retry refund                                                                                                                       |
 | CE_07       | 400                                   | processing_error      | Verification failed while processing with the connector. Retry operation                                                                                            | Retry the operation again as verification failed at the connector                                                                                                                    |
 | CE_08       |                                       | processing_error      | Dispute operation failed while processing with connector. Retry operation                                                                                           | Retry the operation again as dispute failed at the connector                                                                                                                                   |
-| HE_01       | 400                                   | object_not_found      | Requested object(Customer, Payments, Merchants, Refunds etc.) does not exist in our records                                                                         | Please verify the object(Customer, Payments, Merchants, Refunds etc.) details and enter valid details                                                                               |                                                                                                                           |
+| HE_01       | 400                                   | object_not_found      | Requested object(Customer, Payments, Merchants, Refunds etc.) does not exist in our records                                                                         | Please verify the object(Customer, Payments, Merchants, Refunds etc.) details and enter valid details                                                                               |                                                                                                                         
 | HE_02       | 500                                   | server_not_available  | Something went wrong                                                                                                                                                | Please retry the operation. If the error still persists, please reach out to Hyperswitch support                                                                                         |
 | HE_03       | 400                                   | validation_error      | Validation Failed for the requested operation with the given details.                                                                                               | Please verify the details again and enter valid details                                                                                                                      |
 | HE_04       | 400                                   | lock_timeout          | Resource is busy.                                                                                                                                                   | Please try again later.                                                                                                                 |
