Updating-CE-WE-HE

--- a/api-reference/essentials/error_codes.mdx
+++ b/api-reference/essentials/error_codes.mdx
@@ -32,7 +32,7 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | IR_16       | 400                                   | invalid_request_error | “message”                                                                                                                                                           | Typically used when information involving multiple fields or previously provided information doesn’t satisfy a condition. Refer to our API documentation for required fields and format |
 | IR_17       | 401                                   | invalid_request_error | Access forbidden, an invalid JWT token was used                                                                                                                     | Provide a valid JWT token to access the APIs                                                                                                                                  |
 | IR_18       |                                       | invalid_request_error | "message"                                                                                                                                                           | The user is not authorised to update the customer, Contact Org. Admin for the appropriate access.                                                                                                                 |
-| IR_19       |                                       | invalid_request_error | "message"                                                                                                                                                           |                                                                                                                                                                                             |
+| IR_19       |                                       | invalid_request_error | "message"                                                                                                                                                           | Please check and retry with correct details.                                                                                                                                                                                           |
 | IR_20       |                                       | invalid_request_error | "flow" not supported by the "connector"                                                                                                                             | Requested flow is not supported for this Connector.                                                                                                                              |
 | IR_21       |                                       | invalid_request_error | Missing required params                                                                                                                                             | Please add the required params in the request.                                                                                                                               |
 | IR_22       |                                       | invalid_request_error | Access forbidden. Not authorized to access this "resource"                                                                                                          | Contact Org. Admin for the appropriate access.                                                                                                                              |
