--- a/api-reference/essentials/error_codes.mdx
+++ b/api-reference/essentials/error_codes.mdx
@@ -31,19 +31,19 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | IR_15       | 400                                   | invalid_request_error | Invalid Ephemeral Key for the customer                                                                                                                              | Please pass the right Ephemeral key for the customer                                                                                                                                 |
 | IR_16       | 400                                   | invalid_request_error | “message”                                                                                                                                                           | Typically used when information involving multiple fields or previously provided information doesn’t satisfy a condition. Refer to our API documentation for required fields and format |
 | IR_17       | 401                                   | invalid_request_error | Access forbidden, an invalid JWT token was used                                                                                                                     | Provide a valid JWT token to access the APIs                                                                                                                                  |
-| IR_18       |                                       | invalid_request_error | "message"                                                                                                                                                           | The user is not authorised to update the customer, Contact Org. Admin for the appropriate access.                                                                                                                 |
-| IR_19       |                                       | invalid_request_error | "message"                                                                                                                                                           | Please check and retry with correct details. Refer to our API documentation                                                                                                                                                                                           |
-| IR_20       |                                       | invalid_request_error | "flow" not supported by the "connector"                                                                                                                             | Requested flow is not supported for this Connector.                                                                                                                              |
-| IR_21       |                                       | invalid_request_error | Missing required params                                                                                                                                             | Please add the required params in the request. Refer to our API documentation                                                                                                                             |
-| IR_22       |                                       | invalid_request_error | Access forbidden. Not authorized to access this "resource"                                                                                                          | Contact Org. Admin for the appropriate access.                                                                                                                              |
-| IR_23       |                                       | invalid_request_error | "message"                                                                                                                                                           | Use a supported file provider. Refer to our API documentation                                                                                                                               |
-| IR_24       |                                       | processing_error      | Invalid "wallet_name" wallet token                                                                                                                                  | Share the correct wallet token.                                                                                                                               |
-| IR_25       |                                       | invalid_request_error | Cannot delete the default payment method                                                                                                                            | Check if the Payment method is activated. Refer to Control centre to check this.                                                                                                                             |
-| IR_26       |                                       | invalid_request_error | Invalid Cookie                                                                                                                                                      | Recheck the site setting for the cookies.                                                                                                                              |
-| IR_27       |                                       | invalid_request_error | Extended card info does not exist                                                                                                                                   | Recheck the card info shared in the request.                                                                                                                              |
-| IR_28       |                                       | invalid_request_error | "message"                                                                                                                                                           | Use a valid currency. Refer to our API documentation                                                                                                                              |
-| IR_29       |                                       | invalid_request_error | "message"                                                                                                                                                           | The data format is invalid for this request. Refer to our API documentation                                                                                                                              |
-| IR_30       |                                       | invalid_request_error | Merchant connector account is configured with invalid config                                                                                                        | Correct the config for merchant connector account                                                                                                                              |
+| IR_18       | 401                                      | invalid_request_error | "message"                                                                                                                                                           | The user is not authorised to update the customer, Contact Org. Admin for the appropriate access.                                                                                                                 |
+| IR_19       | 400                                      | invalid_request_error | "message"                                                                                                                                                           | Please check and retry with correct details. Refer to our API documentation                                                                                                                                                                                           |
+| IR_20       | 400                                      | invalid_request_error | "flow" not supported by the "connector"                                                                                                                             | Requested flow is not supported for this Connector.                                                                                                                              |
+| IR_21       | 400                                      | invalid_request_error | Missing required params                                                                                                                                             | Please add the required params in the request. Refer to our API documentation                                                                                                                             |
+| IR_22       | 403                                      | invalid_request_error | Access forbidden. Not authorized to access this "resource"                                                                                                          | Contact Org. Admin for the appropriate access.                                                                                                                              |
+| IR_23       | 400                                      | invalid_request_error | "message"                                                                                                                                                           | Use a supported file provider. Refer to our API documentation                                                                                                                               |
+| IR_24       | 422                                      | processing_error      | Invalid "wallet_name" wallet token                                                                                                                                  | Share the correct wallet token.                                                                                                                               |
+| IR_25       | 400                                      | invalid_request_error | Cannot delete the default payment method                                                                                                                            | Check if the Payment method is activated. Refer to Control centre to check this.                                                                                                                             |
+| IR_26       | 400                                      | invalid_request_error | Invalid Cookie                                                                                                                                                      | Recheck the site setting for the cookies.                                                                                                                              |
+| IR_27       | 404                                      | invalid_request_error | Extended card info does not exist                                                                                                                                   | Recheck the card info shared in the request.                                                                                                                              |
+| IR_28       | 400                                      | invalid_request_error | "message"                                                                                                                                                           | Use a valid currency. Refer to our API documentation                                                                                                                              |
+| IR_29       | 422                                     | invalid_request_error | "message"                                                                                                                                                           | The data format is invalid for this request. Refer to our API documentation                                                                                                                              |
+| IR_30       | 400                                      | invalid_request_error | Merchant connector account is configured with invalid config                                                                                                        | Correct the config for merchant connector account                                                                                                                              |
 | IR_31       | 400                                    | invalid_request_error | Card with the provided iin does not exist                                                                                                                            | Check the IIN (Issuer Identification Number) and ensure it is correct.                                                                                                          |
 | IR_32       | 400                                    | invalid_request_error | The provided card IIN length is invalid, please provide an iin with 6 or 8 digits                                                                                    | Provide a valid IIN with either 6 or 8 digits.                                                                                                                                  |
 | IR_33       | 400                                    | invalid_request_error | File not found / valid in the request                                                                                                                               | Ensure the required file is included in the request and is valid. Refer to our API documentation                                                                                                               |
@@ -51,7 +51,7 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | IR_35       | 400                                    | invalid_request_error | File purpose not found in the request or is invalid                                                                                                                 | Specify a valid file purpose in the request.                                                                                                                                    |
 | IR_36       | 400                                    | invalid_request_error | File content type not found / valid                                                                                                                                 | Ensure the file content type is specified and is valid.                                                                                                                         |
 | IR_37       | 404                                    | invalid_request_error | "message"                                                                                                                                                           | Check the request for the resource being accessed and ensure it exists.                                                                                                         |
-| IR_38       | 400                                    | invalid_request_error | "message"                                                                                                                                                          | Check for any duplicate entries in the request and correct them.                                                                                                                |
+| IR_38       | 404                                    | invalid_request_error | "message"                                                                                                                                                          | Check for any duplicate entries in the request and correct them.                                                                                                                |
 | IR_39       | 400                                    | invalid_request_error | required payment method is not configured or configured incorrectly for all configured connectors                                                                   | Verify that the required payment method is correctly configured for all connectors in use.                                                                                       |
 | CE_00       | Status codes shared by the connectors | connector_error       | “message”                                                                                                                                                           | The error code and message passed from the connectors. Refer to the respective connector’s documentation for more information on the error                                           |
 | CE_01       | 400                                   | processing_error      | Payment failed during authorization with the connector. Retry payment                                                                                               | Retry the payment again as payment failed at the connector during authorization                                                                                                      |
@@ -61,17 +61,17 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | CE_05       | 400                                   | processing_error      | The card has expired                                                                                                                                                | Card expired. Please pass valid card data                                                                                                                                            |
 | CE_06       | 400                                   | processing_error      | Refund failed while processing with the connector. Retry refund                                                                                                     | Refund failed to process at the connector. Please retry refund                                                                                                                       |
 | CE_07       | 400                                   | processing_error      | Verification failed while processing with the connector. Retry operation                                                                                            | Retry the operation again as verification failed at the connector                                                                                                                    |
-| CE_08       |                                       | processing_error      | Dispute operation failed while processing with connector. Retry operation                                                                                           | Retry the operation again as dispute failed at the connector                                                                                                                                   |
-| CE_09       |                                       | invalid_request_error      | Payout validation failed                                                                                                                                       | Retry the operation again with correct Payout details.                                                                                                                                    |
-| HE_00       | 400                                   | ServerNotAvailable      | Resource not available right now, Please try again later.                                                                                                         | Please Wait for a few moments and try again. If the error still persists, please reach out to Hyperswitch support                                                                              |                                                                                                                         
-| HE_01       | 500                                   | DuplicateRequest       | Requested operation(Customer, Payments, Merchants, Refunds etc.) for these identifier already exists.                                                              | Please verify the Details(Customer, Payments, Merchants, Refunds, as applicable on the basis of request) and enter valid details.                                                                                         |
-| HE_02       | 400                                   | object_not_found      | Requested object(Customer, Payments, Merchants, Refunds etc.) does not exist in our records                                                                         | Please verify the Details(Customer, Payments, Merchants, Refunds, as applicable on the basis of request) and enter valid details.                                                                               |                                                                                                                         
-| HE_03       | 400                                   | validation_error      | Validation Failed for the requested operation with the given details.                                                                                               | Please verify the details again and enter valid details                                                                                                                      |
-| HE_04       | 400                                   | object_not_found          | Requested object(Customer, Payments, Merchants, Refunds etc.) does not exist in our records                                                                     | Please verify the Details(Customer, Payments, Merchants, Refunds, as applicable on the basis of request) and enter valid details.                                                                                                                 |
-| HE_05       | 400                                   | ProcessingError          | Missing or invalid tenant details.                                                                                                                               | Please verify the tenant Details and try again.                                                                                                                 |
-| WE_01       | 401                                   | WebhookAuthenticationFailed    | Failed to authenticate the webhook                                                                                                                         | Please verify the authentication credentials and try again.                                                                         |
+| CE_08       | 400                                      | processing_error      | Dispute operation failed while processing with connector. Retry operation                                                                                           | Retry the operation again as dispute failed at the connector                                                                                                                                   |
+| CE_09       | 400                                      | invalid_request_error      | Payout validation failed                                                                                                                                       | Retry the operation again with correct Payout details.                                                                                                                                    |
+| HE_00       | 422,500                                   | ServerNotAvailable      | Resource not available right now, Please try again later.                                                                                                         | Please Wait for a few moments and try again. If the error still persists, please reach out to Hyperswitch support                                                                              |                                                                                                                         
+| HE_01       | 400,422                                   | DuplicateRequest       | Requested operation(Customer, Payments, Merchants, Refunds etc.) for these identifier already exists.                                                              | Please verify the Details(Customer, Payments, Merchants, Refunds, as applicable on the basis of request) and enter valid details.                                                                                         |
+| HE_02       | 404                                   | object_not_found      | Requested object(Customer, Payments, Merchants, Refunds etc.) does not exist in our records                                                                         | Please verify the Details(Customer, Payments, Merchants, Refunds, as applicable on the basis of request) and enter valid details.                                                                               |                                                                                                                         
+| HE_03       | 500                                   | validation_error      | Validation Failed for the requested operation with the given details.                                                                                               | Please verify the details again and enter valid details                                                                                                                      |
+| HE_04       | 404                                   | object_not_found          | Requested object(Customer, Payments, Merchants, Refunds etc.) does not exist in our records                                                                     | Please verify the Details(Customer, Payments, Merchants, Refunds, as applicable on the basis of request) and enter valid details.                                                                                                                 |
+| HE_05       | 500                                   | ProcessingError          | Missing or invalid tenant details.                                                                                                                               | Please verify the tenant Details and try again.                                                                                                                 |
+| WE_01       | 400                                   | WebhookAuthenticationFailed    | Failed to authenticate the webhook                                                                                                                         | Please verify the authentication credentials and try again.                                                                         |
 | WE_02       | 400                                   | WebhookBadRequest              | Bad request received in webhook                                                                                                                            | Check the request parameters and format, then try again.                                                                            |
 | WE_03       | 500                                   | WebhookProcessingFailure       | There was some issue processing the webhook                                                                                                                | Please try again later. If the issue persists, contact Hyperswitch support.                                                                     |
 | WE_04       | 404                                   | WebhookResourceNotFound        | Webhook resource not found                                                                                                                                 | Ensure the webhook URL is correct and the resource exists.                                                                          |
-| WE_05       | 422                                   | WebhookUnprocessableEntity     | Unable to process the webhook body                                                                                                                         | Ensure the webhook body is correctly formatted and try again.                                                                       |
+| WE_05       | 400                                   | WebhookUnprocessableEntity     | Unable to process the webhook body                                                                                                                         | Ensure the webhook body is correctly formatted and try again.                                                                       |
 | WE_06       | 400                                   | WebhookInvalidMerchantSecret   | Merchant Secret set by merchant for webhook source verification is invalid                                                                                 | Verify the Merchant Secret, then try again.                                                              |
