updated_status_codes

--- a/api-reference/essentials/error_codes.mdx
+++ b/api-reference/essentials/error_codes.mdx
@@ -69,9 +69,9 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | HE_03       | 500                                   | validation_error      | Validation Failed for the requested operation with the given details.                                                                                               | Please verify the details again and enter valid details                                                                                                                      |
 | HE_04       | 404                                   | object_not_found          | Requested object(Customer, Payments, Merchants, Refunds etc.) does not exist in our records                                                                     | Please verify the Details(Customer, Payments, Merchants, Refunds, as applicable on the basis of request) and enter valid details.                                                                                                                 |
 | HE_05       | 500                                   | ProcessingError          | Missing or invalid tenant details.                                                                                                                               | Please verify the tenant Details and try again.                                                                                                                 |
-| WE_01       | 400                                   | WebhookAuthenticationFailed    | Failed to authenticate the webhook                                                                                                                         | Please verify the authentication credentials and try again.                                                                         |
-| WE_02       | 400                                   | WebhookBadRequest              | Bad request received in webhook                                                                                                                            | Check the request parameters and format, then try again.                                                                            |
-| WE_03       | 500                                   | WebhookProcessingFailure       | There was some issue processing the webhook                                                                                                                | Please try again later. If the issue persists, contact Hyperswitch support.                                                                     |
-| WE_04       | 404                                   | WebhookResourceNotFound        | Webhook resource not found                                                                                                                                 | Ensure the webhook URL is correct and the resource exists.                                                                          |
-| WE_05       | 400                                   | WebhookUnprocessableEntity     | Unable to process the webhook body                                                                                                                         | Ensure the webhook body is correctly formatted and try again.                                                                       |
-| WE_06       | 400                                   | WebhookInvalidMerchantSecret   | Merchant Secret set by merchant for webhook source verification is invalid                                                                                 | Verify the Merchant Secret, then try again.                                                              |
+| WE_01       | 400                                   | InvalidRequestError    | Failed to authenticate the webhook                                                                                                                         | Please verify the authentication credentials and try again.                                                                         |
+| WE_02       | 400                                   | InvalidRequestError              | Bad request received in webhook                                                                                                                            | Check the request parameters and format, then try again.                                                                            |
+| WE_03       | 500                                   | RouterError       | There was some issue processing the webhook                                                                                                                | Please try again later. If the issue persists, contact Hyperswitch support.                                                                     |
+| WE_04       | 404                                   | ObjectNotFound        | Webhook resource not found                                                                                                                                 | Ensure the webhook URL is correct and the resource exists.                                                                          |
+| WE_05       | 400                                   | InvalidRequestError     | Unable to process the webhook body                                                                                                                         | Ensure the webhook body is correctly formatted and try again.                                                                       |
+| WE_06       | 400                                   | InvalidRequestError   | Merchant Secret set by merchant for webhook source verification is invalid                                                                                 | Verify the Merchant Secret, then try again.                                                              |
